[package]
name = "bee-hashes"
version = "0.1.0"
authors = ["Richard Janis Goldschmidt <superfluffy@aberrat.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0.0", features = ["keccak"] }